[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DS_Project_448" # Changed to avoid name collision on PyPI
version = "1.0.0"
authors = [{name = "Cillian Geraghty", email = "L00181448@atu.ie"}]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*", "dist*", "tests*"] # Prevents build artifacts from being bundled
